Fix text clipping for address bar - closes #23

--- a/src/components/browser-window/browser-window.scss
+++ b/src/components/browser-window/browser-window.scss
@@ -46,7 +46,8 @@
 
   .address {
     display: inline-block;
-    line-height: normal;
+    height: 1.5em;
+    line-height: 1.5em;
     vertical-align: middle;
     margin: 0 0.5em;
     /* Make overflowing URL shorten  */
